<resources>
    <string name="app_name">优e管家</string>
    <string name="cancle">取消</string>
    <string name="title">请选择出生日期</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="comfirm">Comfirm</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="close">Close</string>
    <string name="ignore">Ignore</string>
    <string name="dialog_AboutMe">About me</string>
    <string name="dialog_AddCamera">Add Camera</string>
    <string name="dialog_EditCamera">Edit Camera</string>
    <string name="dialog_Parameter">Parameter Setting</string>
    <string name="dialog_AdvancedSetting">Advanced Setting</string>
    <string name="dialog_LanSearch">Search camera from LAN</string>
    <string name="dialog_EventSearch">Search Event</string>
    <string name="dialog_FormatSDCard">Format SDCard</string>
    <string name="dialog_LiveView">Live View</string>
    <string name="dialog_Playback">Playback</string>
    <string name="dialog_Exit">Exit?</string>
    <string name="kc_aec">状态：</string>
    <string name="kc_aec_update_state">校正状态：</string>
    <string name="kc_aec_update_state_not_yet">尚未</string>
    <string name="kc_aec_update_state_finished">已完成</string>
    <string name="kc_aec_update_time">校正时间：</string>
    <string name="kc_aec_update_time_not_yet">尚未</string>
    <string name="kc_aec_train">校正</string>
    <string name="ntf_no_open_notification">The notification Settings are not opened</string>
    <string name="ctxReconnect">Reconnect</string>
    <string name="ctxEditCamera">Edit Camera</string>
    <string name="ctxViewEvent">Event List</string>
    <string name="ctxViewSnapshot">Snapshot</string>
    <string name="ctxRemoveCamera">Remove Camera</string>
    <string name="optAddCamera">Add</string>
    <string name="optAbout">About</string>
    <string name="optExplain">Explanation</string>
    <string name="optExit">Exit</string>
    <string name="lstClickToAddCamera">Add Device</string>
    <string name="logout">Logout</string>
    <string name="addUser">Add User</string>
    <string name="btnExit">Exit</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnRunInBackground">Background</string>
    <string name="Delete_All_Photos">Delete all photos</string>
    <string name="tips_open_gps">Is open GPS?</string>
    <string name="loading_wait">Loading wait...</string>
    <string name="tips_wakeup_failed">Wake up failed!</string>
    <string name="tips_incoming_view">Video are influenced by network status, please choose whether to answer</string>
    <string name="tips_speak_failed">Speak channel open failed.</string>
    <string name="txtCopyRightInfo">Copyright 2017 All rights reserved.</string>
    <string name="txtName">Name:</string>
    <string name="txtAddCamera">Add Camera</string>
    <string name="txtUID">UID:</string>
    <string name="txtSecurityCode">Security Code:</string>
    <string name="btnScan">Scan</string>
    <string name="btnSearch">Search</string>
    <string name="txtDeviceSetting">Device Setting</string>
    <string name="txtAdvancedSetting">Advanced Setting</string>
    <string name="btnAdvanced">Advanced</string>
    <string name="txtOldPassword">Old:</string>
    <string name="txtNewPassword">New:</string>
    <string name="txtConfirmPassword">Confirm:</string>
    <string name="txtFPS">FPS:</string>
    <string name="txtBPS">bps:</string>
    <string name="txtOnlineNumber">Online:</string>
    <string name="txtFrameRatio">Rcv:</string>
    <string name="txtTurnOffAudio">Turn off Audio</string>
    <string name="txtTurnOnSpeaker">Speaker</string>
    <string name="txtTurnOnMicrophone">Microphone</string>
    <string name="txtAudioOff">Audio Off</string>
    <string name="txtSpeaker">Speaker</string>
    <string name="txtMicrophone">Microphone</string>
    <string name="txtMute">Mute</string>
    <string name="txtListen">Listen</string>
    <string name="txtListening">Listening</string>
    <string name="txtSpeak">Speak</string>
    <string name="txtSpeaking">Speaking</string>
    <string name="txtQuality">Quality:</string>
    <string name="txtGood">Good</string>
    <string name="txtNormal">Normal</string>
    <string name="txtBad">Bad</string>
    <string name="txtEventType">Event type:</string>
    <string name="txtEventTime">Event time:</string>
    <string name="txtSearchEventDuration">Search event from:</string>
    <string name="pull_to_refresh">Pull down to refresh</string>
    <string name="release_to_refresh">release to refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="txtSearchEventFrom">Begin Time</string>
    <string name="txtSearchEventTo">End Time</string>
    <string name="txtSearchEventType">Event</string>
    <string name="txtLoadEventList">Loading&#8230;</string>
    <string name="txtNoResultFound">No result found.</string>
    <string name="btnRefresh">Refresh</string>
    <string name="btnFormat">Format</string>
    <string name="txtFormatSDCardTitle">Detect an Unrecognizable SDCard!</string>
    <string name="txtFormatSDCardDesc">You may choose to format the SDCard or it could not be use. Format command will ERASE all data of your SDCard.</string>
    <string name="chbShowTipsFormatSDCard">Show tips when detect an unrecognizable card.</string>
    <string name="txtNoNetworkConnection">No Connection</string>
    <string name="txtCameraOffline">Camera offline</string>
    <string name="btnRetry">Retry</string>
    <string name="txtNoPhotos">No Photos</string>
    <string name="txtNoPhotosDetail">This album contains no photos.</string>
    <string name="IOTC_ER_NOT_INITIALIZED">IOTC initialize failed</string>
    <string name="IOTC_ER_CONNECT_IS_CALLING">IOTC_Connect_ByXX() is calling</string>
    <string name="IOTC_ER_FAIL_RESOLVE_HOSTNAME">Can\'t resolved server\'s domain name</string>
    <string name="IOTC_ER_SERVER_NOT_RESPONSE">Server not response</string>
    <string name="IOTC_ER_FAIL_GET_LOCAL_IP">Can\'t Get local IP</string>
    <string name="IOTC_ER_UNLICENSE">UID is not registered</string>
    <string name="IOTC_ER_EXCEED_MAX_SESSION">Exceed the max session number</string>
    <string name="IOTC_ER_TIMEOUT">Timeout</string>
    <string name="IOTC_ER_DEVICE_NOT_LISTENING">The device is not on listening</string>
    <string name="IOTC_ER_CAN_NOT_FIND_DEVICE">Can\'t not found device</string>
    <string name="AV_ER_INVALID_ARG">Invalid session ID</string>
    <string name="AV_ER_EXCEED_MAX_SESSION">Exceed the max session number</string>
    <string name="AV_ER_FAIL_CREATE_THREAD">Failed to create thread</string>
    <string name="AV_ER_SERV_NO_RESPONSE">Server not response</string>
    <string name="AV_ER_TIMEOUT">Timeout</string>
    <string name="AV_ER_SESSION_CLOSE_BY_REMOTE">Remote site closed this session</string>
    <string name="AV_ER_REMOTE_TIMEOUT_DISCONNECT">Session is disconnected because timeout</string>
    <string name="AV_ER_INVALID_SID">Session ID was invalid</string>
    <string name="connstus_connecting">正在联机...&#8230;</string>
    <string name="connstus_connected">已联机</string>
    <string name="connstus_disconnect">未联机</string>
    <string name="connstus_unknown_device">未知设备</string>
    <string name="connstus_connection_failed">联机失败</string>
    <string name="connstus_wrong_password">密码错误</string>
    <string name="connection_timeout">连线逾时</string>
    <string name="connstus_sleep">睡眠中</string>
    <string name="connstus_max_session">Device has get max connect</string>
    <string name="connmode_p2p">P2P</string>
    <string name="connmode_relay">Relay</string>
    <string name="connmode_lan">LAN</string>
    <string name="connmode_none">None</string>
    <string name="evttype_all">全部</string>
    <string name="evttype_motion_detection">红外报警</string>
    <string name="evttype_video_lost">视频中断</string>
    <string name="evttype_io_alarm">IO 报警</string>
    <string name="evttype_motion_pass">红外报警</string>
    <string name="evttype_video_resume">视频恢复</string>
    <string name="evttype_io_alarm_pass">IO 报警</string>
    <string name="evttype_expt_reboot">系统异常重启</string>
    <string name="evttype_sd_fault">SD卡错误</string>
    <string name="evttype_fulltime_recording">全时录像</string>
    <string name="tips_warning">Warning</string>
    <string name="tips_add_camera_ok">Add camera successfully.</string>
    <string name="tips_edit_camera_ok">Edit camera successfully.</string>
    <string name="tips_remove_camera_ok">Remove camera successfully.</string>
    <string name="tips_add_camera_duplicated">This camera already exists, please enter another one.</string>
    <string name="tips_camera_name">[Camera name] must be entered.</string>
    <string name="tips_dev_uid">[UID] is not entered.</string>
    <string name="tips_dev_uid_not">[UID] is not existed.</string>
    <string name="tips_dev_uid_character">[UID] must be typed in 20 characters.</string>
    <string name="tips_dev_security_code">[Security Code] is not entered.</string>
    <string name="tips_remove_camera_confirm">Sure to remove?</string>
    <string name="tips_snapshot_ok">Snapshot saved.</string>
    <string name="tips_snapshot_failed">Snapshot was failed.</string>
    <string name="tips_all_field_can_not_empty">Camera Password can not be empty.</string>
    <string name="tips_old_password_is_wrong">The old password is invalid.</string>
    <string name="tips_new_passwords_do_not_match">The new password and confirm password do not match.</string>
    <string name="tips_new_passwords_length_illegal">New password length must be more than 5 and less than 13.</string>
    <string name="tips_modify_security_code_ok">Modify security code successfully, and it will reconnect later.</string>
    <string name="tips_modify_security_code_failed">Modify security code failed.</string>
    <string name="tips_wifi_retrieving">Retrieving&#8230;</string>
    <string name="tips_wifi_connecting">Connecting&#8230;</string>
    <string name="tips_wifi_connected">Connected</string>
    <string name="tips_wifi_disconnect">Disconnect</string>
    <string name="tips_wifi_remote_device_timeout">No response from remote device</string>
    <string name="tips_wifi_remote_device_connecting">connection remote device connecting</string>
    <string name="tips_wifi_wrongpassword">Incorrect  password</string>
    <string name="tips_wifi_ready">Ready</string>
    <string name="tips_wifi_weak_signal">Connected (Weak Signal)</string>
    <string name="tips_wifi_connect_failed">Unable to connect to the network.</string>
    <string name="tips_no_barcode_scanner"> No barcode scan software available in your device, do you want to download now?</string>
    <string name="tips_no_sdcard">No SDCard found in your device.</string>
    <string name="tips_search_event_no_result">No result found.</string>
    <string name="tips_play_record_failed">Play record failed.</string>
    <string name="tips_play_record_end">The video has finished playing.</string>
    <string name="tips_play_record_timeout">Can not found remote record.</string>
    <string name="tips_search_within_an_hour">Within an hour</string>
    <string name="tips_search_within_half_a_day">Within half a day</string>
</resources>