<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_corner"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/txtDeviceSetting"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#DDDDDD" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginBottom="15dp"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/txtUID"
                        android:textColor="#333333" />

                    <EditText
                        android:id="@+id/edtUID"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:capitalize="characters"
                        android:maxLength="20"
                        android:singleLine="true" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:id="@+id/bindUser"
                    android:visibility="gone"
                    android:textColor="@color/red"
                    android:gravity="right"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="2" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnScan"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/btnScan" />

                        <Button
                            android:id="@+id/btnSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/btnSearch" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="10dp"
                    android:background="#DDDDDD" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginBottom="15dp"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/txtSecurityCode"
                        android:textColor="#333333" />

                    <EditText
                        android:id="@+id/edtSecurityCode"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:capitalize="characters"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="10dp"
                    android:background="#DDDDDD" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginBottom="15dp"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/txtName"
                        android:textColor="#333333" />

                    <EditText
                        android:id="@+id/edtNickName"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:capitalize="characters"
                        android:singleLine="true"
                        android:text="Camera" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/background_silver"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>